# upbank-python

./: README.md  Taskfile.yml  openapi.yaml  pyproject.toml
contract-patches/: Add_page-after_field.patch
spec/: upbank_spec_README.md
spec/.openapi-generator/: FILES
spec/upbank_spec/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
spec/upbank_spec/api/: __init__.py  accounts_api.py  categories_api.py  tags_api.py  transactions_api.py  utility_endpoints_api.py  webhooks_api.py
spec/upbank_spec/docs/: AccountResource.md  AccountResourceAttributes.md  AccountResourceLinks.md  AccountResourceRelationships.md  AccountResourceRelationshipsTransactions.md  AccountResourceRelationshipsTransactionsLinks.md  AccountTypeEnum.md  AccountsApi.md  CashbackObject.md  CategoriesApi.md  CategoryInputResourceIdentifier.md  CategoryResource.md  CategoryResourceAttributes.md  CategoryResourceRelationships.md  CategoryResourceRelationshipsChildren.md  CategoryResourceRelationshipsChildrenDataInner.md  CategoryResourceRelationshipsParent.md  CategoryResourceRelationshipsParentData.md  CreateWebhookRequest.md  CreateWebhookResponse.md  ErrorObject.md  ErrorObjectSource.md  ErrorResponse.md  GetAccountResponse.md  GetCategoryResponse.md  GetTransactionResponse.md  GetWebhookResponse.md  HoldInfoObject.md  HoldInfoObjectForeignAmount.md  ListAccountsResponse.md  ListAccountsResponseLinks.md  ListCategoriesResponse.md  ListTagsResponse.md  ListTransactionsResponse.md  ListWebhookDeliveryLogsResponse.md  ListWebhooksResponse.md  MoneyObject.md  (+53 more)
tests/: test_dev.py
(+182 files in other folders)
