[tool.poetry]
name = "upbank-client"
version = "0.1.0"
description = "Tods"
authors = ["Pavel Khorikov (JargeZ) <levpony@gmail.com>"]
readme = "README.md"
packages = [
    {include = "upbank_client", from = "src"},
    {include = "upbank_spec", from = "spec"}
]
repository = "https://github.com/JargeZ/upbank-client"
license = "MIT License"
keywords = ["OpenAPI", "Australia Up Bank"]
include = ["src/upbank_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.10"

# Spec dependencies
urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
aiohttp-retry = ">= 2.8.3"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.group.dev.dependencies]
tox = ">=3.9.0"
types-python-dateutil = ">=2.8.19.14"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-asyncio = "=0.20.3"
pytest = "^7.4.3"

[tool.mypy]
mypy_path = "./"
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

